<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
    android:background="@drawable/img">


    <ImageView
        android:id="@+id/ariesImageView"
        android:layout_width="wrap_content"
        android:layout_height="134dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="41dp"
        android:layout_toStartOf="@+id/leoImageView"
        android:clickable="true"
        android:contentDescription="@string/aries_horoscope"
        android:focusable="true"
        android:src="@drawable/aries_image" />

    <ImageView
        android:id="@+id/libraImageView"
        android:layout_width="wrap_content"
        android:layout_height="134dp"
        android:layout_below="@+id/ariesImageView"
        android:layout_marginTop="66dp"
        android:layout_marginEnd="49dp"
        android:layout_toStartOf="@+id/scorpioImageView"
        android:clickable="true"
        android:contentDescription="@string/libra_horoscope"
        android:focusable="true"
        android:src="@drawable/libra_image" />

    <ImageView
        android:id="@+id/leoImageView"
        android:layout_width="wrap_content"
        android:layout_height="140dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="39dp"
        android:clickable="true"
        android:contentDescription="@string/leo_horoscope"
        android:focusable="true"
        android:src="@drawable/leo_image" />

    <ImageView
        android:id="@+id/scorpioImageView"
        android:layout_width="wrap_content"
        android:layout_height="134dp"
        android:layout_below="@id/leoImageView"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="31dp"
        android:clickable="true"
        android:contentDescription="@string/scorpio_horoscope"
        android:focusable="true"
        android:src="@drawable/scorpio_image" />

    <ImageView
        android:id="@+id/geminiImageView"
        android:layout_width="wrap_content"
        android:layout_height="130dp"
        android:layout_below="@id/scorpioImageView"
        android:layout_marginTop="66dp"
        android:layout_marginEnd="49dp"
        android:layout_toStartOf="@+id/virgoImageView"
        android:clickable="true"
        android:contentDescription="@string/gemini_horoscope"
        android:focusable="true"
        android:src="@drawable/gemini_image" />

    <ImageView
        android:id="@+id/virgoImageView"
        android:layout_width="139dp"
        android:layout_height="123dp"
        android:layout_below="@+id/scorpioImageView"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="66dp"
        android:layout_marginEnd="45dp"
        android:clickable="true"
        android:contentDescription="@string/virgo_horoscope"
        android:focusable="true"
        android:src="@drawable/virgo_image" />

    <ImageView
        android:id="@+id/cancerImageView"
        android:layout_width="168dp"
        android:layout_height="172dp"
        android:layout_below="@id/virgoImageView"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="94dp"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="54dp"
        android:layout_toStartOf="@+id/taurusImageView"
        android:clickable="true"
        android:contentDescription="@string/cancer_horoscope"
        android:focusable="true"
        android:src="@drawable/cancer_image" />

    <ImageView
        android:id="@+id/taurusImageView"
        android:layout_width="180dp"
        android:layout_height="179dp"
        android:layout_below="@+id/virgoImageView"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="95dp"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="63dp"
        android:clickable="true"
        android:contentDescription="@string/taurus_horoscope"
        android:focusable="true"
        android:src="@drawable/taurus_image" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="66dp"
        android:layout_marginBottom="233dp"
        android:text="GEMINI"
        android:textColor="?attr/colorOnTertiaryContainer"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="57dp"
        android:layout_marginBottom="25dp"
        android:text="CANCER"
        android:textColor="?attr/colorOnTertiaryContainer"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="77dp"
        android:layout_height="34dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="72dp"
        android:layout_marginTop="177dp"
        android:text="ARIES"
        android:textColor="?attr/colorOnTertiaryContainer"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="52dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="177dp"
        android:layout_marginEnd="80dp"
        android:text="LEO"
        android:textColor="?attr/colorOnTertiaryContainer"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="68dp"
        android:layout_marginBottom="27dp"
        android:text="TAURUS"
        android:textColor="?attr/colorOnTertiaryContainer"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="74dp"
        android:layout_marginTop="381dp"
        android:text="LIBRA"
        android:textColor="?attr/colorOnTertiaryContainer"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="383dp"
        android:layout_marginEnd="64dp"
        android:text="SCORPIO"
        android:textColor="?attr/colorOnTertiaryContainer"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="78dp"
        android:layout_marginBottom="233dp"
        android:text="VIRGO"
        android:textColor="?attr/colorOnTertiaryContainer"
        android:textSize="22sp" />

</RelativeLayout>
